Fixed: Always autofocus and Text alignment issue

--- a/Calculator.css
+++ b/Calculator.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 input::-webkit-outer-spin-button,
@@ -11,7 +11,6 @@ input::-webkit-inner-spin-button {
 }
 
 main {
-
   min-height: 100vh;
   padding: 1rem;
 
@@ -32,28 +31,27 @@ main {
 }
 
 .calculator_row {
-
   width: 376px;
   display: flex;
   position: relative;
 
-/* -------------------------------------------------------------------------------- */
+  /* -------------------------------------------------------------------------------- */
   /* below property used to remove white spaces between inline-block elements
   Explanation:- As inline-block elements converts line-breaks or multiple space to 1 whitespace */
-  font-size: 0;  
+  font-size: 0;
 
-  
   /* gap: 1rem; */
 }
 
 /*  */
 .calculator_displaybox {
+  direction: ltr;
+  text-align: right;
   outline: none;
   border: none;
   background-color: rgb(252, 252, 252);
   width: 100%;
   height: 4rem;
-  text-align: right;
   font-size: 2rem;
 }
 
@@ -76,7 +74,6 @@ main {
   height: 3.9rem;
 }
 
-
 /* Background styles */
 .transparent_button {
   background-color: transparent;
@@ -87,30 +84,27 @@ main {
 }
 
 .whitish_button {
-  
   background-color: rgb(252, 252, 252);
 }
 
 .bluish_button {
-  background-color: #9DC7E8;
+  background-color: #9dc7e8;
 }
-
 
 /* Typography */
 .fontWeight_600 {
   font-weight: 500;
 }
 
-.grey_font{
-  color: #C3C5C5;
+.grey_font {
+  color: #c3c5c5;
 }
 
 .italic_font {
   font-style: oblique;
 }
 
-
-.fontSize_40{
+.fontSize_40 {
   font-size: 1.3rem;
 }
 
@@ -121,8 +115,6 @@ main {
   background: rgb(173, 173, 173);
 }
 
-
-
 /* backspace image styles */
 
 .backspace_img {
@@ -131,7 +123,6 @@ main {
 
 .backspace:active {
   background-color: #f1f1f1;
-  
 }
 
 .dropdown_wrapper {
@@ -140,20 +131,19 @@ main {
 
 .trigno > span {
   display: inline-block;
-  
+
   margin-inline: 0.4rem;
   transform: rotate(90deg);
   transition: transform 0.3s ease-in-out;
 }
 
-.dropdown_wrapper:hover span  {
+.dropdown_wrapper:hover span {
   transform: rotate(270deg);
 }
 
-
 /* dropdowns for trigonometry and functions */
 
-.dropdown_container{
+.dropdown_container {
   display: none;
   /* width: ; */
   position: absolute;
@@ -161,7 +151,7 @@ main {
   justify-content: center;
   top: 77%;
   width: 9rem;
-  background: #F1F1F1;
+  background: #f1f1f1;
   box-shadow: 0px 0px 5px -2px rgb(77 75 75);
   z-index: 1;
 }
@@ -170,6 +160,6 @@ main {
   padding-block: 0.4rem;
 }
 
-.dropdown_wrapper:hover .dropdown_container  {
+.dropdown_wrapper:hover .dropdown_container {
   display: flex;
 }
